vibe: better font
It gave options, I picked "Press Start 2P"

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -491,7 +491,7 @@
 
 			// Draw score
 			context.fillStyle = '#FFFFFF';
-			context.font = '20px Arial';
+			context.font = '12px "Press Start 2P"';
 			context.textAlign = 'left';
 			context.fillText(`Score: ${gameState.score}`, 10, 60);
 
@@ -499,7 +499,7 @@
 			if (gameState.wormhole) {
 				// Draw message
 				context.fillStyle = '#00FFFF'; // Cyan
-				context.font = 'bold 24px Arial';
+				context.font = '16px "Press Start 2P"';
 				context.textAlign = 'center';
 				context.fillText('Wormhole detected!', canvas.width / 2, 50);
 
