--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -344,6 +344,7 @@
 						label: `Shield Upgrade (Level ${gameState.player.shieldLevel} → ${gameState.player.shieldLevel + 1})`,
 						action: () => {
 							gameState.player.shieldLevel++;
+							gameState.player.applyShieldUpgrade(); // Apply max health and heal to full
 							DebugLogger.log(`Shield upgraded to level ${gameState.player.shieldLevel}`);
 							resumeFromUpgrade();
 						}
@@ -587,22 +588,37 @@
 				gameState.player.reverseThrust(deltaTime);
 			}
 			if (engine.keyDown[" "]) {
-				if (gameState.gameTime > gameState.lastShotTime + GameConfig.PLAYER.FIRE_RATE) {
+				const weaponStats = gameState.player.getWeaponStats();
+				if (gameState.gameTime > gameState.lastShotTime + weaponStats.fireRate) {
 					gameState.lastShotTime = gameState.gameTime;
-					const shotVelocity = Vector2D.fromRadial(gameState.player.sprite.rotation, Laser.speed);
-					const newShot = new Laser(
-						new Vector2D(
-							gameState.player.sprite.position.x,
-							gameState.player.sprite.position.y
-						),
-						shotVelocity
-					);
-					gameState.playerProjectiles.push(newShot);
+
+					// Fire multiple shots with spread
+					const spreadRadians = weaponStats.spreadAngle * (Math.PI / 180);
+					for (let i = 0; i < weaponStats.shotCount; i++) {
+						// Calculate angle for this shot
+						let shotAngle = gameState.player.sprite.rotation;
+						if (weaponStats.shotCount > 1) {
+							// Distribute shots evenly across the spread angle
+							const angleOffset = (i - (weaponStats.shotCount - 1) / 2) * spreadRadians;
+							shotAngle += angleOffset;
+						}
+
+						const shotVelocity = Vector2D.fromRadial(shotAngle, Laser.speed);
+						const newShot = new Laser(
+							new Vector2D(
+								gameState.player.sprite.position.x,
+								gameState.player.sprite.position.y
+							),
+							shotVelocity
+						);
+						gameState.playerProjectiles.push(newShot);
+					}
 					playSoundEffect('shoot', 0.3);
 				}
 			}
 
 			gameState.player.update(deltaTime);
+			gameState.player.updateShieldRegen(deltaTime); // Update shield regeneration
 
 			// Update all NPCs with unified loop
 			for (const npc of gameState.npcs) {
@@ -682,6 +698,7 @@
 					const collisionResult = npc.onCollideWithPlayer();
 					gameState.particleSystem.spawnExplosion(npc.sprite.position, collisionResult.particleColor);
 					gameState.player.health -= collisionResult.damage;
+					gameState.player.onDamage(); // Reset shield regen timer
 					DebugLogger.log(`Player hit! Health: ${gameState.player.health}`);
 					if (collisionResult.sound) {
 						playSoundEffect(collisionResult.sound, collisionResult.volume);
@@ -698,12 +715,14 @@
 					// Damage depends on projectile type
 					if (projectile instanceof Missile) {
 						gameState.player.health -= projectile.damage; // 50 damage
+						gameState.player.onDamage(); // Reset shield regen timer
 						DebugLogger.log(`Player hit by missile! Health: ${gameState.player.health}`);
 						playSoundEffect('explosion', 0.6);
 						gameState.particleSystem.spawnExplosion(projectile.sprite.position, "255, 100, 50");
 					} else {
 						// Plasma shots deal 25 damage
 						gameState.player.health -= 25;
+						gameState.player.onDamage(); // Reset shield regen timer
 						DebugLogger.log(`Player hit by alien shot! Health: ${gameState.player.health}`);
 						playSoundEffect('hit', 0.5);
 					}
@@ -803,17 +822,31 @@
 
 				// Button 0 (A/Cross): Shoot
 				if (gamepad.buttons[0] && gamepad.buttons[0].pressed) {
-					if (gameState.gameTime > gameState.lastShotTime + GameConfig.PLAYER.FIRE_RATE) {
+					const weaponStats = gameState.player.getWeaponStats();
+					if (gameState.gameTime > gameState.lastShotTime + weaponStats.fireRate) {
 						gameState.lastShotTime = gameState.gameTime;
-						const shotVelocity = Vector2D.fromRadial(gameState.player.sprite.rotation, Laser.speed);
-						const newShot = new Laser(
-							new Vector2D(
-								gameState.player.sprite.position.x,
-								gameState.player.sprite.position.y
-							),
-							shotVelocity
-						);
-						gameState.playerProjectiles.push(newShot);
+
+						// Fire multiple shots with spread
+						const spreadRadians = weaponStats.spreadAngle * (Math.PI / 180);
+						for (let i = 0; i < weaponStats.shotCount; i++) {
+							// Calculate angle for this shot
+							let shotAngle = gameState.player.sprite.rotation;
+							if (weaponStats.shotCount > 1) {
+								// Distribute shots evenly across the spread angle
+								const angleOffset = (i - (weaponStats.shotCount - 1) / 2) * spreadRadians;
+								shotAngle += angleOffset;
+							}
+
+							const shotVelocity = Vector2D.fromRadial(shotAngle, Laser.speed);
+							const newShot = new Laser(
+								new Vector2D(
+									gameState.player.sprite.position.x,
+									gameState.player.sprite.position.y
+								),
+								shotVelocity
+							);
+							gameState.playerProjectiles.push(newShot);
+						}
 						playSoundEffect('shoot', 0.3);
 					}
 				}
